--- a/assets/hotelAssets/stylehotel.css
+++ b/assets/hotelAssets/stylehotel.css
@@ -264,10 +264,47 @@ body{
 .banner{
 	display: flex;
 	height: 65rem;
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: space-between;
+
 	/* align-content: start; */
+	
+}
+#left-side{
+	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+}
+
+.banner-img-wp {
+    width: 100%;
+    height: 50%;
+    padding-left: 30px;
+}
+
+.banner-img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    animation: biani 4.5s linear infinite alternate;
+    box-shadow: 0 0px 20px rgba(36, 39, 37, 0.3);
+}
+
+@keyframes biani {
+    0% {
+        border-radius: 48% 52% 57% 43% / 34% 44% 56% 66%;
+    }
+    25% {
+        border-radius: 62% 38% 64% 36% / 34% 55% 45% 66%;
+    }
+    50% {
+        border-radius: 43% 57% 51% 49% / 33% 42% 58% 67%;
+    }
+    100% {
+        border-radius: 40% 60% 43% 57% / 52% 32% 68% 48%;
+    }
 }
 .banner-heading{
 	font-size: 5rem;
@@ -1158,3 +1195,9 @@ body{
   .icon {
 	color: #c82333;
    }
+
+
+
+   
+  
+  
