--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -94,21 +94,7 @@
  %>
  
 <div class="header1" style="background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, .3)), url('<%= imageForBack1 %>') center no-repeat;">
-    <!-- <div class="brand">
-        <% if(HotelProfile.avatar){ %>
-            <div >
-                <img  width="40px" src="/uploads/hotelProfile/<%=HotelProfile.avatar%>" alt="">        
-            </div>
-        <%} 
-            else{ %>
-
-                <div id="imgbrand">
-                    <i class="fa-solid fa-utensils"></i>
-                </div>
-            <%} %>
-        <h3 class="heading">  <%= HotelProfile.name %> </h3>
-    </div> -->
-
+    
     <!-- form for the cover photo -->
 
     <div id="popup-container3">
@@ -134,47 +120,53 @@
     </div>
     <%} %>
     <div class="banner">
-        <h1 class="banner-heading"><%= HotelProfile.name %></h1>
-        <p class="banner-paragraph">Think Delicious , Eat delicious</p>
-
-        <div class="container">
-             <div class="row align-items-start" style="color: aliceblue;">
-
-                    <div class="col text-left" >
-                    <h5>Followers</h5>
-                    <span id="followers" class="num"><%=followers%></span>
-                    </div>  
-                    <div  class="col text-center">
-                    <% if(followbtn == true){
-                        var fvalue = "follow";
-                    }
-                    else{
-                        var fvalue = "unfollow";
-                    }
-                    console.log(userToVisit,userId)
-                        if(userToVisit!=userId){ %>                
-                            <button class="banner-button" onclick="followHotel(value)" id="fbutton" value="<%=HotelProfile.id%>" class="btn btn-primary"><%= fvalue %></button>
-                    <% }
-                        else{ %>
-                            <button id="open-popup">Edit</button>
-                            <!-- <button  id="fbutton" value="<%=HotelProfile.id%>" >Edit</button> -->
         
-        
-                        <% }
-                        %>
-                    <span class="num"></span>
-                    </div>
-                    <div class="col text-right" >
-                    <h5>Following</h5>
-                    <span id="following" class="num"><%=following%></span>
-                    </div>
+        <div id="left-side" >
+            <h1 class="banner-heading"><%= HotelProfile.name %></h1>
+            <p class="banner-paragraph">Think Delicious , Eat delicious</p>
+    
+            <div class="container" >
+                 <div class="row align-items-start" style="color: aliceblue;">
+    
+                        <div class="col text-left" >
+                            <h5>Followers</h5>
+                            <span id="followers" class="num"><%=followers%></span>
+                        </div>  
+                        <div  class="col text-center">
+                            <% if(followbtn == true){
+                                var fvalue = "follow";
+                            }
+                            else{
+                                var fvalue = "unfollow";
+                            }
+                            console.log(userToVisit,userId)
+                                if(userToVisit!=userId){ %>                
+                                    <button class="banner-button" onclick="followHotel(value)" id="fbutton" value="<%=HotelProfile.id%>" class="btn btn-primary"><%= fvalue %></button>
+                            <% }
+                                else{ %>
+                                    <button id="open-popup">Edit</button>
+                                    <!-- <button  id="fbutton" value="<%=HotelProfile.id%>" >Edit</button> -->
                 
-             </div>   
-             <div>
-                <img src="" alt="">
-             </div>
+                
+                                <% }
+                                %>
+                            <span class="num"></span>
+                        </div>
+                        <div class="col text-right" >
+                            <h5>Following</h5>
+                            <span id="following" class="num"><%=following%></span>
+                        </div>
+                    
+                 </div>   
+            </div>
+             
         </div>
-
+        
+        
+        <div class="banner-img-wp">
+            <div class="banner-img" style="background-image: url(https://images.unsplash.com/photo-1560956544-3061773e4b46?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
+            </div>
+        </div>
 
     </div>
 </div>
