--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -35,7 +35,7 @@ else{
 <div class="container mt-5 mb-5">
     <div class="row d-flex align-items-center justify-content-center">
         <div class="col-md-6">
-            <div class="card">
+            <div class="card" style="background-color: rgba(137, 43, 226, 0.616);">
                 <div class="d-flex justify-content-between p-2 px-3">
                     <%
                      var profilepic
@@ -104,55 +104,56 @@ else{
                             </span>
                         </div>
                         </form>
-                        <div class="d-flex flex-row muted-color"> <span>2 comments</span> </div>
+                        <div class="d-flex flex-row muted-color"> <span><%=post.comments.length%> comments</span> </div>
                     </div>
                     <!-- <div class="comment-input"> <input type="text" class="form-control">
                         <div class="fonts"> <i class="fa fa-camera"></i> </div>
                     </div> -->
-                        
-                    <div class="comment-input">
+                    <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample-<%=post.id%>"  aria-expanded="false" aria-controls="collapseExample">
+                        <i class="fa-solid fa-comment"></i>
+                    </a>
+                    <div class="collapse" id="collapseExample-<%=post.id%>" >
+                        <div class="card card-body">
+                            <div class="comment-input">
 
-                        <form  id="commentForm-<%=post._id%>" action="/posts/comment/?&type=<%=typeOfUser%>"  method="post" class="commentFormClass">
-            
-                            <input  style="width: 400px; float: left;" class="form-control" type="text" name="content" id="" placeholder="comment" required>
-                            <input style="margin-left: 10px;" type="submit" id="submitComment">
-                            <label for="submitComment"><i class="fa-solid fa-paper-plane"></i></label>
-                            <input type="hidden" name="post_id" value="<%=post.id%>">
-            
-            
-                        </form>
-            
-                        <script>
-                            new commentDOMClass(`<%=post._id%>`);
-                            new upVoteClass("post","<%=post._id%>");
-                        </script>
-            
-                         
-                        
-            
-                    </div>
-
-                    <hr>
-                    <div class="comments">
-
-                        <ul style="list-style-type: none;" id="commentUL-<%=post._id%>" class="commentULClass">
-                            <% for(comment of post.comments){%>
-                                <%-include('comments')%>
-                            <%}%>
+                                <form  id="commentForm-<%=post._id%>" action="/posts/comment/?&type=<%=typeOfUser%>"  method="post" class="commentFormClass">
+                                    
+                                    <div style="display: flex; justify-content: space-between; ">
+                                        <input  style="width: 50%;" class="form-control" type="text" name="content" id="" placeholder="comment" required>
+                                        <input  type="submit" id="submitComment">
+                                        <label for="submitComment"><i class="fa-solid fa-paper-plane"></i></label>
+                                    </div>
+                                    <input type="hidden" name="post_id" value="<%=post.id%>">
+                    
+                    
+                                </form>
+                    
+                                <script>
+                                    new commentDOMClass(`<%=post._id%>`);
+                                    new upVoteClass("post","<%=post._id%>");
+                                </script>
+                    
+                                 
+                                
+                    
+                            </div>
         
-                        </ul> 
-                        <!-- <div class="d-flex flex-row mb-2"> <img src="https://i.imgur.com/9AZ2QX1.jpg" width="40" class="rounded-image">
-                            <div class="d-flex flex-column ml-2"> <span class="name">Daniel Frozer</span> <small class="comment-text">I like this alot! thanks alot</small>
-                                <div class="d-flex flex-row align-items-center status"> <small>Like</small> <small>Reply</small> <small>Translate</small> <small>18 mins</small> </div>
+                            <hr>
+                            <div class="comments">
+        
+                                <ul style="list-style-type: none;" id="commentUL-<%=post._id%>" class="commentULClass">
+                                    <% for(comment of post.comments){%>
+                                        <%-include('comments')%>
+                                    <%}%>
+                
+                                </ul> 
+                             
+                               
                             </div>
-                        </div> -->
-                        <!-- <div class="d-flex flex-row mb-2"> <img src="https://i.imgur.com/1YrCKa1.jpg" width="40" class="rounded-image">
-                            <div class="d-flex flex-column ml-2"> <span class="name">Elizabeth goodmen</span> <small class="comment-text">Thanks for sharing!</small>
-                                <div class="d-flex flex-row align-items-center status"> <small>Like</small> <small>Reply</small> <small>Translate</small> <small>8 mins</small> </div>
-                            </div>
-                        </div> -->
-                       
+                        </div>
                     </div>
+                        
+                    
                 </div>
             </div>
         </div>
