--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,12 @@
     <head>
 
         <title> <%= title %>  </title>
+        <!-- comments -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 
          <link rel="icon" type="image/x-icon" href="/uploads/Free_Logo_Maker_-_Create_your_own_logo_in_minutes___1_-removebg-preview-_1_.ico">
 
@@ -20,6 +26,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-switch@3.3.4/dist/css/bootstrap3/bootstrap-switch.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-switch@3.3.4/dist/js/bootstrap-switch.min.js"></script>
         
+        
+
         
 
     </head>
