--- a/views/header.ejs
+++ b/views/header.ejs
@@ -41,7 +41,7 @@
         </div>
         
         
-        <div class="modal fade-in-element" id="exampleModalLogout" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade-in-elementLogout" id="exampleModalLogout" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document" style="justify-content: center;">
               <div class="modal-content" id="LogoutContainer">
                 <div class="modal-header">
