--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -194,7 +194,30 @@ else{
                         <%}%>
                         </div>
 
-                <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost " id="userProfileImgSizing">
+                        <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost " id="userProfileImgSizing">
+
+
+                        <!-- <div style="display: flex; justify-content: center; align-items: center; height: 400px;">
+                            <div style="max-width: 100%; max-height: 100%; text-align: center;">
+                                <img
+                                    src="<%= post.picturePath %>"
+                                    class="img-fluid"
+                                    onload="adjustImageDimensions(this)"
+                                >
+                            </div>
+                        </div>
+                        
+                        <script>
+                            function adjustImageDimensions(img) {
+                                if (img.naturalWidth > img.naturalHeight) {
+                                    img.style.maxWidth = '100%';
+                                    img.style.height = 'auto';
+                                } else {
+                                    img.style.width = 'auto';
+                                    img.style.height = '100%';
+                                }
+                            }
+                        </script> -->
                 
                 <div class="p-2">
                     <p class="text-justify caption"><%= post.content%></p>
