post template updated

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -480,7 +480,7 @@
 
     </div>
 
-    <div class="navigation">
+    <div class="navigation" id="myNavigation">
 
         <div class="nav-header">
             <h1 class="heading-name">RRR</h1>
