--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -194,8 +194,34 @@ else{
                         <%}%>
                         </div>
 
-                        <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost " id="userProfileImgSizing">
+                        <div class="imgPostDivContainer">
+                            <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost "  id="userProfileImgSizing">
+                        </div>
+                        <!-- <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost "  style="object-fit: contain; max-height: 500px;" id="userProfileImgSizing"> -->
 
+
+                        <!-- <div >
+                            <div style="max-width: 100%; max-height: 100%; text-align: center;">
+                                <img
+                                    src="<%= post.picturePath %>"
+                                    class="img-fluid"
+                                    onload="adjustImageDimensions(this)"
+                                >
+                            </div>
+                        </div>
+                        
+                        <script>
+                            function adjustImageDimensions(img) {
+                                console.log(img.naturalHeight)
+                                if (img.naturalWidth > img.naturalHeight) {
+                                    img.style.maxWidth = '100%';
+                                    img.style.height = 'auto';
+                                } else {
+                                    img.style.width = 'auto';
+                                    img.style.height = '100%';
+                                }
+                            }
+                        </script> -->
 
                         <!-- <div style="display: flex; justify-content: center; align-items: center; height: 400px;">
                             <div style="max-width: 100%; max-height: 100%; text-align: center;">
@@ -318,7 +344,7 @@ else{
 
 <script>
     function copyText(value) {
-      var text ="http://localhost:8000/share/"+value;
+      var text ="https://rrr.net.in/share/"+value;
       
       // Create a temporary textarea element
       var tempTextArea = document.createElement("textarea");
