--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -18,14 +18,20 @@ li{
     /* border-bottom: 1px solid black; */
     color: #fff;
 }
+.imgPostDivContainer{
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    /* background-color: rgba(14,14,14,1); */
+    border-top: 1px solid rgb(50,50,50);
+    border-bottom: 1px solid rgb(50,50,50);
+}
 .imgInPost{
-    border-top: 2px solid rgb(50,50,50);
-    border-bottom: 2px solid rgb(50,50,50);
-
-    /* border-radius: 10px; */
-    max-height: 600px;
+    /* max-height: 600px; */
     background-position: center;
     background-size: cover;
+    max-height: 500px;
+    object-fit: contain;
 }
 .caption{
     color: #fff;
