--- a/assets/css/userProfile.css
+++ b/assets/css/userProfile.css
@@ -372,6 +372,28 @@
     flex-wrap: wrap;
 }
 
+
+/* for image in userprofile */
+.imgPostDivContainer{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  /* background-color: rgba(14,14,14,1); */
+  border-top: 1px solid rgb(50,50,50);
+  border-bottom: 1px solid rgb(50,50,50);
+}
+
+.imgInPost{
+  /* max-height: 600px; */
+  background-position: center;
+  background-size: cover;
+  /* min-height: 400px;
+  max-height: 400px; */
+  height: 400px;
+  object-fit: contain;
+
+}
+
 #venom li{
     /* margin-left: 20px; */
     margin-right: 20px;
