--- a/views/profilePosts.ejs
+++ b/views/profilePosts.ejs
@@ -195,27 +195,9 @@ else{
                         </div>
 
 
-                        <div style="display: flex; justify-content: center; align-items: center; height: 400px;">
-                            <div style="max-width: 100%; max-height: 100%; text-align: center;">
-                                <img
-                                    src="<%= post.picturePath %>"
-                                    class="img-fluid"
-                                    onload="adjustImageDimensions(this)"
-                                >
-                            </div>
+                        <div class="imgPostDivContainer">
+                            <img  src="<%= post.picturePath %>"  class="img-fluid  imgInPost " >
                         </div>
-                        
-                        <script>
-                            function adjustImageDimensions(img) {
-                                if (img.naturalWidth > img.naturalHeight) {
-                                    img.style.maxWidth = '100%';
-                                    img.style.height = 'auto';
-                                } else {
-                                    img.style.width = 'auto';
-                                    img.style.height = '100%';
-                                }
-                            }
-                        </script>
                         
 
                         
@@ -322,7 +304,7 @@ else{
 
 <script>
     function copyText(value) {
-      var text ="http://localhost:8000/share/"+value;
+      var text ="https://rrr.net.in/share/"+value;
       
       // Create a temporary textarea element
       var tempTextArea = document.createElement("textarea");
