--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -13,7 +13,7 @@
        <div  style="margin-top: 5px;">
         <a href="/">
             
-            <img width="200px" height="150px"  src="/uploads/logo.png" alt="" id="HeaderLogo" class="HotelHeaderLogo">
+            <img width="200px" height="150px"  src="/uploads/logo.png" alt="" id="HeaderLogo" class="HotelHeaderLogo" style="object-fit: contain;" >
 
         </a>
 
