--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -396,22 +396,14 @@
                     } else {
                         var imageForBack1 = "/uploads/hotelProfile/imagesForBack/imageForBack.jpg";
                     }
-                    <!-- console.log(imageForBack1) -->
                     %>
                 <div <% if (i == 0) { %>class="carousel-item active"<% } else{%> class="carousel-item" <%} %> style="background-image: url('<%= imageForBack1 %>'); ">
                     
 
                     <!-- image for logo -->
             
-                    <% if (hotelNames[i].avatar) {
-
-                        var imageForLogo = "/uploads/hotelProfile/" + hotelNames[i].avatar.split('/').pop();
-                        <!-- console.log(imageForLogo) -->
-                    } else {
-                        var imageForLogo = "/uploads/hotelProfile/logo.png";
-                    } %>
                     <div class="logoInCarousel">
-                        <img src="<%=imageForLogo%>" width="65" height="65" alt="">
+                        <img src="<%=hotelNames[i].avatar%>" width="65" height="65" alt="" style="object-fit: contain;">
                     </div>
                     <span  class="nameInCarousel"  style="cursor: pointer;" onclick="location.href='/hotel/profile/<%=hotelNames[i].id%>'" >
                         <p><%=hotelNames[i].name%></p>
