--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -64,7 +64,7 @@
                             <p class="formText" >change cover pic </p>
                         </div > -->
                             <label style="margin-bottom: 20px;"  class="formText">Change cover photo</label>
-                            <input type="file" name="cover" class="form-control" style="width: 90%; " placeholder="cover" value="" required>
+                            <input type="file" name="cover" class="form-control" style="width: 90%; background-color: rgba(0,0,0,0.5); color: aliceblue;" placeholder="cover" value="" required>
                     </div>
                     <!-- <button type="submit" class="btn btn-light">Submit</button> -->
                     <div style="text-align: center;">
@@ -161,10 +161,10 @@
         } %>
 
         <div > 
-            <img id="coverImg"  src="<%=imageForBack1%>" alt="">
+            <img id="coverImg"  src="<%=imageForBack1%>" alt="" style="object-fit: cover;">
         </div>
         <div id="userImg">
-            <img src="<%=UserProfile.avatar%>" alt="user" id="profileImg">
+            <img src="<%=UserProfile.avatar%>" alt="user" id="profileImg" style="object-fit: cover;">
         </div>
         <div id="userDetails" >
             <h3 id="userName"><%= UserProfile.name%></h3>
