--- a/assets/css/userProfile.css
+++ b/assets/css/userProfile.css
@@ -409,7 +409,7 @@
     /* display: none; */
 }
 #venom .caption::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
+    display: none; 
 }
 .upperForUserPage{
     min-height: 35px;
