--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -27,7 +27,6 @@
     }
 </style>
 <% 
-        console.log(typeOfUser)
 
         if( typeOfUser!="Hotel"){
 
@@ -104,7 +103,7 @@
     <!-- <div style=" min-height: 60%; max-height: 60%; width: 100%;">
     <img src="<%=item.picturePath%>" alt="menuPic" class="img-fluid var-img" style=" width: 100%;  height: 100%; background-size: cover;" id="img">
     </div> -->
-    <img  src="<%= item.picturePath%>" alt="" class="var-img"  >
+    <img  src="<%= item.picturePath%>" alt="" class="var-img" style="object-fit: cover;" >
 
 
     
@@ -148,7 +147,6 @@
 
                 <% if(ans[1] == false){%>
 
-                    <%console.log(ans[1])%>
 
                     <div id="givenRating-<%=item.id%>" style="
                             display: flex;
