--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -477,6 +477,7 @@ body {
       justify-content: space-evenly; 
       align-items: center; 
       height: 100%;
+      
   }
   @media(max-width:800px) {
       .card-developer{
@@ -488,7 +489,7 @@ body {
           padding: 8px;
       }
       #developer-container{
-          flex-direction: column;
+          flex-direction: column-reverse;
           /* justify-content: center; */
       }
       .developer-name{
