--- a/views/developer.ejs
+++ b/views/developer.ejs
@@ -75,7 +75,7 @@
         <div id="developer-container">
             <div  class="card-developer">
                 <div style="text-align: left;">
-                    <img class="developer-image" src="https://images.unsplash.com/photo-1685472987164-56feb548d266?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80" alt="">
+                    <img class="developer-image" src="/uploads/adminPictures/Venom.png" alt="">
                 </div>
                 <div class="developer-name">
                     <p>Laxminarayana Koyyana.</p>
@@ -83,17 +83,16 @@
                 <hr class="hr-developer">
                 <div style="margin:0;padding:0;background: #dedede;">
                     <ul class="developer-list">
-                        <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                       
-                        <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com/likith.koyyana"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="https://x.com/Venom_likith?t=pRq5-DyJRnMj44bttfF3QA&s=09"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="https://in.linkedin.com/in/laxminarayana-koyyana-814a21251"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="https://instagram.com/likith_vl?igshid=NGVhN2U2NjQ0Yg=="><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                       </ul>
                 </div>
             </div>
             <div  class="card-developer">
                 <div style="text-align: right;">
-                    <img class="developer-image" src="https://images.unsplash.com/photo-1685472987164-56feb548d266?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80" alt="">
+                    <img class="developer-image" src="/uploads/adminPictures/Hemanth.jpeg" alt="">
                 </div>
                 <div class="developer-name" style="text-align: right;">
                     <p>Sai Hemanth Mandala.</p>
@@ -105,11 +104,10 @@
             </div> -->
             <div style="margin:0;padding:0;background: #dedede;">
                 <ul class="developer-list">
-                    <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                   
-                    <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/hemanth.pandu.140/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href=" https://x.com/HemanthMandala1?t=LWqWdMIumpeKiALBbXhGkA&s=08"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/saihemanth-mandala-8b1a591a8/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/sai_hemanth_mandala/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                   </ul>
             </div>
 
