--- a/views/developer.ejs
+++ b/views/developer.ejs
@@ -75,7 +75,7 @@
         <div id="developer-container">
             <div  class="card-developer">
                 <div style="text-align: left;">
-                    <img class="developer-image" src="/uploads/adminPictures/Venom.png" alt="">
+                    <img class="developer-image" src="/uploads/adminPictures/Venom.jpg" alt="" style="object-fit: contain;">
                 </div>
                 <div class="developer-name">
                     <p>Laxminarayana Koyyana.</p>
